# CureCompass

./: .gitignore  README.md  ask.json  continueWork.txt
backend/: .env.example  README.md  alembic.ini  body.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260323_0001_initial_schema.py  20260324_0002_phase2_password_reset_notifications.py  20260324_0003_phase3_missing_tables_indexes.py  20260324_0004_phase4_embeddings_pgvector.py  20260404_0005_phase6_digest_index.py  20260405_0006_user_preferred_locale.py  20260406_0007_research_item_ai_hebrew_recap.py  20260408_0008_user_private_documents.py  20260409_0009_expand_conditions_catalog.py  20260410_0010_conditions_oddd_nmosd.py  20260411_0011_condition_ingestion_cooldown.py  20260412_0012_reference_sources_orphanet_medlineplus.py  20260413_0013_ask_ai_daily_usage_and_premium.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  conditions_catalog.py  seed.py
backend/app/models/: entities.py
backend/app/schemas/: admin_api.py  ai_enrichment.py  ask_ai.py  auth.py  bookmarks.py  common.py  condition_digest.py  condition_request.py  conditions.py  dashboard.py  digest_api.py  ingestion.py  medical_intel.py  notifications.py  private_document.py  trials_api.py  unsubscribe.py  updates.py
backend/app/scripts/: ai_enrich_worker.py
backend/app/services/: email.py  (+18 more)
backend/tests/: test_ask_ai_daily_usage.py  test_ask_ai_structured.py  test_medical_intel_aggregation.py  test_medical_intel_registry_filter.py
(+122 files in other folders)
